[project]
name = "ttt-raylib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "raylib==5.5.0.3",
]
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python :: 3.12",
    "Private :: Do Not Upload",
]

[project.scripts]
start = "ttt_raylib.entry:main"

[build-system]
requires=["uv_build>=0.9.6,<0.10.0"]
build-backend="uv_build"
